# greyhound

./: .bazelrc  .bazelrc.remote  .bazelversion  .cirrus.bazelrc  .cirrus.yml  .gitignore  .travis.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE  build.sbt  import_external_alias.bzl  macros.bzl  proto.bzl  tests.bzl  third_party.bzl
core/: BUILD.bazel  MANIFEST.MF  README.md
core/src/it/resources/: BUILD.bazel  logback-test.xml
core/src/it/scala/com/wixpress/dst/greyhound/core/: AdminClientIT.scala  BUILD.bazel  ChronicleQueueLocalBufferIT.scala  ConsumerIT.scala  LocalBufferProducerIT.scala  ProducerIT.scala
core/src/it/scala/com/wixpress/dst/greyhound/core/batched/: BUILD.bazel  BatchedConsumerIT.scala
core/src/it/scala/com/wixpress/dst/greyhound/core/combined/: BUILD.bazel  CombinedIT.scala
core/src/it/scala/com/wixpress/dst/greyhound/core/offset/: BUILD.bazel  OffsetIT.scala
core/src/it/scala/com/wixpress/dst/greyhound/core/parallel/: BUILD.bazel  ParallelConsumerIT.scala
core/src/it/scala/com/wixpress/dst/greyhound/core/rabalance/: BUILD.bazel  RebalanceIT.scala
core/src/it/scala/com/wixpress/dst/greyhound/core/retry/: BUILD.bazel  RetryIT.scala
core/src/it/scala/com/wixpress/dst/greyhound/testenv/: BUILD.bazel  ITEnv.scala
core/src/it/scala/com/wixpress/dst/greyhound/testkit/: BUILD.bazel  ITEnv.scala  ManagedKafka.scala  MessagesSink.scala
core/src/main/scala/com/wixpress/dst/greyhound/core/: BUILD.bazel  CommonGreyhoundConfig.scala  Deserializer.scala  Headers.scala  OffsetAndMetadata.scala  PartitionInfo.scala  Record.scala  Serde.scala  Serializer.scala  Topic.scala  TopicPartition.scala  ZManagedSyntax.scala  package.scala
core/src/main/scala/com/wixpress/dst/greyhound/core/admin/: AdminClient.scala  AdminClientMetric.scala  BUILD.bazel  ConsumerGroupDescription.scala
core/src/main/scala/com/wixpress/dst/greyhound/core/compression/: BUILD.bazel  GzipCompression.scala
core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/: BUILD.bazel  BlockingAndNonBlockingRetryPolicy.scala  BlockingAndNonBlockingRetryRecordHandler.scala  BlockingRetryRecordHandler.scala  BlockingStateResolver.scala  Consumer.scala  ConsumerRecord.scala  ConsumerSpec.scala  Consumers.scala  Dispatcher.scala  EventLoop.scala  MissingOffsetsCommitter.scala  NonBlockingRetryPolicy.scala  NonBlockingRetryRecordHandler.scala  Offsets.scala  OffsetsAndGaps.scala  OffsetsInitializer.scala  ParallelConsumer.scala  ParallelRecordHandler.scala  PartitionsState.scala  RebalanceListener.scala  RecordConsumer.scala  RecordHandler.scala  ReportingConsumer.scala  Resource.scala  RetryConfig.scala  RetryPolicy.scala  RetryRecordHandler.scala  TopicPartition.scala  WatermarkedQueue.scala  package.scala
core/src/main/scala/com/wixpress/dst/greyhound/core/metrics/: BUILD.bazel  GreyhoundMetric.scala  GreyhoundMetrics.scala  Metrics.scala  package.scala
core/src/main/scala/com/wixpress/dst/greyhound/core/producer/: BUILD.bazel  Encryptor.scala  ProduceTarget.scala  Producer.scala  ProducerError.scala  ProducerRecord.scala  RecordMetadata.scala  ReportingProducer.scala
core/src/main/scala/com/wixpress/dst/greyhound/core/serialization/: BUILD.bazel  Deserializer.scala  Serializer.scala
core/src/main/scala/com/wixpress/dst/greyhound/core/zioutils/: AcquiredManagedResource.scala  AwaitShutdown.scala  BUILD.bazel  CountdownLatch.scala  Gate.scala  KafkaFutures.scala  PromiseSyntax.scala  ZIOCompatSyntax.scala  ZManagedSyntax.scala  package.scala
core/src/test/resources/: BUILD.bazel  logback.xml
core/src/test/scala/com/wixpress/dst/greyhound/core/compression/: BUILD.bazel  GzipCompressionTest.scala
core/src/test/scala/com/wixpress/dst/greyhound/core/consumer/: BUILD.bazel  BlockingStateResolverTest.scala  ConsumerSpecTest.scala  DelayedRebalanceEffectTest.scala  DispatcherTest.scala  EventLoopTest.scala  MissingOffsetsCommitterTest.scala  OffsetsAndGapsTest.scala  OffsetsInitializerTest.scala  OffsetsTest.scala  (+6 more)
dependencies/google_protobuf/: BUILD.bazel  BUILD.binary  BUILD.proxy  google_protobuf.bzl
dependencies/rules_scala/: BUILD.bazel  custom_phases.bzl  rules_scala.bzl  rules_scala_custom_phases.bzl  rules_scala_customized.bzl  rules_scala_dt_off.bzl  rules_scala_repositories.bzl  scala_meta.bzl  wix_scala_toolchain.bzl
docs/: build.md  (+7 more)
future-interop/: BUILD.bazel
future-interop/src/it/scala/com/wixpress/dst/greyhound/future/: BUILD.bazel  ConsumerIT.scala  GreyhoundFutureIT.scala
future-interop/src/main/scala/com/wixpress/dst/greyhound/future/: AdminClient.scala  BUILD.bazel  Closeable.scala  ContextDecoder.scala  ContextEncoder.scala  GreyhoundBuilder.scala  GreyhoundConfig.scala  GreyhoundConsumer.scala  GreyhoundConsumers.scala  GreyhoundProducer.scala  GreyhoundProducerConfig.scala  GreyhoundRuntime.scala
greyhound-sidecar/src/main/: BUILD.bazel
greyhound-sidecar/src/main/scala/com/wixpress/dst/greyhound/sidecar/: BUILD.bazel  GreyhoundSidecarService.scala
java-interop/: BUILD.bazel
java-interop/src/main/java/com/wixpress/dst/greyhound/java/: BUILD.bazel  BatchRecordHandler.java  BatchRecordHandlers.java  CleanupPolicy.java  DefaultGreyhoundBuilder.scala  Greyhound.java  GreyhoundBuilder.java  GreyhoundConfig.scala  GreyhoundConsumer.scala  GreyhoundConsumers.java  GreyhoundConsumersBuilder.scala  GreyhoundProducer.java  GreyhoundProducerBuilder.scala  GreyhoundProducerConfig.java  OffsetReset.java  RecordHandler.java  RecordHandlers.java  RetryConfig.java  TopicConfig.java
java-interop/src/main/java/com/wixpress/dst/greyhound/scala/: BUILD.bazel  GreyhoundBatchConsumer.scala  GreyhoundConfig.scala  GreyhoundConsumer.scala  GreyhoundConsumersBuilder.scala  GreyhoundProducerBuilder.scala  RetryConfigBuilder.scala
java-interop/src/test/java/com/wixpress/dst/greyhound/java/: BUILD.bazel  GreyhoundBuilderTest.java
platforms_common/: BUILD.bazel  build_platforms.bzl  exec_props.bzl
test-agent/src/main/java/com/wixpress/agent/: BUILD.bazel  TestsJavaAgent.java
toolchains/: BUILD.bazel  jdk_repos.bzl
tools/build_rules/: BUILD.bazel  prelude_bazel
(+172 files in other folders)
