package(default_visibility = ["//visibility:public"])

load("@graknlabs_bazel_distribution//maven/templates:rules.bzl", "assemble_maven", "deploy_maven")

scala_library(
    name = "greyhound-future",
    srcs = [
        "//future-interop/src/main/scala/com/wixpress/dst/greyhound/future:sources",
    ],
    tags = ["maven_coordinates=com.wix:greyhound-future_2.12:{pom_version}"],
    visibility = ["//visibility:public"],
    deps = [
        "//core:greyhound-core",
    ],
)

assemble_maven(
    name = "assemble-maven",
    developers = {
        "1": [
            "name=Natan Silnitsky",
            "email=natans@wix.com",
            "organization=Wix",
        ],
        "2": [
            "name=Noam Berman",
            "email=noambe@wix.com",
            "organization=Wix",
        ],
        "3": [
            "name=Dmitry Karlinsky",
            "email=dmitryka@wix.com",
            "organization=Wix",
        ],
    },
    license = "MIT",
    package = "{maven_packages}",
    project_description = "Greyhound - Rich Kafka Client with Scala Future API",
    project_name = "Greyhound Future",
    project_url = "https://github.com/wix/greyhound",
    scm_url = "https://github.com/wix/greyhound.git",
    target = "//future-interop:greyhound-future",
    version_file = "//central-sync:VERSION",
)

deploy_maven(
    name = "deploy-maven",
    deployment_properties = "//central-sync:deployment.properties",
    target = ":assemble-maven",
)
