package(default_visibility = ["//visibility:public"])

load("@vaticle_bazel_distribution//maven:rules.bzl", "assemble_maven", "deploy_maven")

scala_library(
    name = "greyhound-future",
    srcs = [
        "//future-interop/src/main/scala/com/wixpress/dst/greyhound/future:sources",
    ],
    tags = [
        "manual",
        "maven_coordinates=com.wix:greyhound-future_2.12:{pom_version}",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//core:greyhound-core",
        "@dev_zio_izumi_reflect_2_12",
        "@dev_zio_zio_2_12",
        "@dev_zio_zio_stacktracer_2_12",
    ],
)

assemble_maven(
    name = "assemble-maven",
    developers = {
        "1": [
            "name=Natan Silnitsky",
            "email=natans@wix.com",
            "organization=Wix",
        ],
        "2": [
            "name=Noam Berman",
            "email=noambe@wix.com",
            "organization=Wix",
        ],
        "3": [
            "name=Dmitry Karlinsky",
            "email=dmitryka@wix.com",
            "organization=Wix",
        ],
    },
    license = "mit",
    project_description = "Greyhound - Rich Kafka Client with Scala Future API",
    project_name = "Greyhound Future",
    project_url = "https://github.com/wix/greyhound",
    scm_url = "https://github.com/wix/greyhound.git",
    tags = ["manual"],
    target = "//future-interop:greyhound-future",
    version_file = "//central-sync:VERSION",
    workspace_refs = "//central-sync:workspace_refs.json",
)

deploy_maven(
    name = "deploy-maven",
    release = "https://oss.sonatype.org/service/local/staging/deploy/maven2/",
    snapshot = "https://oss.sonatype.org/content/repositories/snapshots",
    tags = ["manual"],
    target = ":assemble-maven",
)
