package(default_visibility = ["//visibility:public"])

load("@vaticle_bazel_distribution//maven:rules.bzl", "assemble_maven", "deploy_maven")

java_library(
    name = "greyhound-java-core",
    srcs = [
        "//java-interop/src/main/java/com/wixpress/dst/greyhound/java:sources",
    ],
    tags = [
        "manual",
        "maven_coordinates=com.wix:greyhound-java-core:{pom_version}",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//core:greyhound-core",
        "//future-interop:greyhound-future",
        "@org_apache_kafka_kafka_clients",
    ],
)

scala_library(
    name = "greyhound-java",
    srcs = [
        "//java-interop/src/main/java/com/wixpress/dst/greyhound/scala:sources",
    ],
    tags = [
        "manual",
        "maven_coordinates=com.wix:greyhound-java:{pom_version}",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//core:greyhound-core",
        "//future-interop:greyhound-future",
        "//java-interop:greyhound-java-core",
        "@dev_zio_izumi_reflect_{}".format(scala_version_dependency),
        "@dev_zio_zio_{}".format(scala_version_dependency),
        "@dev_zio_zio_stacktracer_{}".format(scala_version_dependency),
        "@dev_zio_zio_streams_{}".format(scala_version_dependency),
        "@org_apache_kafka_kafka_clients",
    ],
)

assemble_maven(
    name = "assemble-maven-java-core",
    developers = {
        "1": [
            "name=Natan Silnitsky",
            "email=natans@wix.com",
            "organization=Wix",
        ],
        "2": [
            "name=Noam Berman",
            "email=noambe@wix.com",
            "organization=Wix",
        ],
        "3": [
            "name=Dmitry Karlinsky",
            "email=dmitryka@wix.com",
            "organization=Wix",
        ],
    },
    license = "mit",
    project_description = "Greyhound - Rich Kafka Client with Java API",
    project_name = "Greyhound Java Core",
    project_url = "https://github.com/wix/greyhound",
    scm_url = "https://github.com/wix/greyhound.git",
    tags = ["manual"],
    target = "//java-interop:greyhound-java-core",
    version_file = "//central-sync:VERSION",
    workspace_refs = "//central-sync:workspace_refs.json",
)

deploy_maven(
    name = "deploy-maven-java-core",
    release = "https://oss.sonatype.org/service/local/staging/deploy/maven2/",
    snapshot = "https://oss.sonatype.org/content/repositories/snapshots",
    tags = ["manual"],
    target = ":assemble-maven-java-core",
)

assemble_maven(
    name = "assemble-maven",
    developers = {
        "1": [
            "name=Natan Silnitsky",
            "email=natans@wix.com",
            "organization=Wix",
        ],
        "2": [
            "name=Noam Berman",
            "email=noambe@wix.com",
            "organization=Wix",
        ],
        "3": [
            "name=Dmitry Karlinsky",
            "email=dmitryka@wix.com",
            "organization=Wix",
        ],
    },
    license = "mit",
    project_description = "Greyhound - Rich Kafka Client with Java API",
    project_name = "Greyhound Java",
    project_url = "https://github.com/wix/greyhound",
    scm_url = "https://github.com/wix/greyhound.git",
    tags = ["manual"],
    target = "//java-interop:greyhound-java",
    version_file = "//central-sync:VERSION",
    workspace_refs = "//central-sync:workspace_refs.json",
)

deploy_maven(
    name = "deploy-maven",
    release = "https://oss.sonatype.org/service/local/staging/deploy/maven2/",
    snapshot = "https://oss.sonatype.org/content/repositories/snapshots",
    tags = ["manual"],
    target = ":assemble-maven",
)
