package(default_visibility = ["//visibility:public"])

constraint_setting(name = "machine_size_large_setting")

constraint_setting(name = "machine_size_small_setting")

constraint_setting(name = "rbe_pool_generic_setting")

constraint_setting(name = "rbe_pool_firecracker_setting")

constraint_setting(name = "docker_user_priviledged_setting")

constraint_setting(name = "docker_user_unpriviledged_setting")

constraint_setting(name = "host_docker_networking_enabled_setting")

constraint_setting(name = "host_docker_networking_disabled_setting")

constraint_setting(name = "network_access_enabled_setting")

constraint_setting(name = "network_access_disabled_setting")

constraint_value(
    name = "machine_size_large",
    constraint_setting = ":machine_size_large_setting",
)

constraint_value(
    name = "machine_size_small",
    constraint_setting = ":machine_size_small_setting",
)

constraint_value(
    name = "rbe_pool_firecracker",
    constraint_setting = ":rbe_pool_firecracker_setting",
)

constraint_value(
    name = "rbe_pool_generic",
    constraint_setting = ":rbe_pool_generic_setting",
)

constraint_value(
    name = "docker_user_unprivileged",
    constraint_setting = ":docker_user_unpriviledged_setting",
)

constraint_value(
    name = "docker_user_privileged",
    constraint_setting = ":docker_user_priviledged_setting",
)

constraint_value(
    name = "network_mode_enabled",
    constraint_setting = ":network_access_enabled_setting",
)

constraint_value(
    name = "network_mode_disabled",
    constraint_setting = ":network_access_disabled_setting",
)

constraint_value(
    name = "host_docker_networking_mode_enabled",
    constraint_setting = ":host_docker_networking_enabled_setting",
)

constraint_value(
    name = "host_docker_networking_mode_disabled",
    constraint_setting = ":host_docker_networking_disabled_setting",
)
