load("@io_bazel_rules_scala//scala:scala.bzl", "setup_scala_testing_toolchain", "setup_scala_toolchain")

setup_scala_toolchain(
    name = "scala_toolchain",
    dependency_mode = "plus-one",
    parser_combinators_deps = [
        "@maven//:org_scala_lang_modules_scala_parser_combinators_2_12",
    ],
    scala_compile_classpath = [
        "@maven//:org_scala_lang_scala_compiler",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_library_classpath = [
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_macro_classpath = [
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_xml_deps = [
        "@maven//:org_scala_lang_modules_scala_xml_2_12",
    ],
    scalacopts = [
        "-unchecked",
        "-deprecation",
        "-feature",
        "-Xmax-classfile-name",
        "240",
        "-Ywarn-unused-import",
        "-Ywarn-unused",
        "-Ywarn-macros:after",
    ],
    visibility = ["//visibility:public"],
)

setup_scala_testing_toolchain(
    name = "scala_test_toolchain",
    junit_classpath = [
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_core",
    ],
    specs2_classpath = [
        "@maven//:org_specs2_specs2_common_2_12",
        "@maven//:org_specs2_specs2_core_2_12",
        "@maven//:org_specs2_specs2_fp_2_12",
        "@maven//:org_specs2_specs2_matcher_2_12",
    ],
    specs2_junit_classpath = [
        "@maven//:org_specs2_specs2_junit_2_12",
    ],
    visibility = ["//visibility:public"],
)
