load("@io_bazel_rules_scala//scala:scala.bzl", "setup_scala_testing_toolchain", "setup_scala_toolchain")


setup_scala_toolchain(
    name = "scala_toolchain",
    dependency_mode = "plus-one",
    parser_combinators_deps = [
        "@maven//:org_scala_lang_modules_scala_parser_combinators_{}".format(scala_version_dependency),
    ],
    scala_compile_classpath = [
        "@maven//:org_scala_lang_scala_compiler",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_library_classpath = [
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_macro_classpath = [
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_xml_deps = [
        "@maven//:org_scala_lang_modules_scala_xml_{}".format(scala_version_dependency),
    ],
    scalacopts = [
        "-unchecked",
        "-deprecation",
        "-feature",
        "240",
        "-Ywarn-unused",
        "-Ywarn-macros:after",
    ],
    visibility = ["//visibility:public"],
)

setup_scala_testing_toolchain(
    name = "scala_test_toolchain",
    junit_classpath = [
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest_core",
    ],
    specs2_classpath = [
        "@maven//:org_specs2_specs2_common_{}".format(scala_version_dependency),
        "@maven//:org_specs2_specs2_core_{}".format(scala_version_dependency),
        "@maven//:org_specs2_specs2_fp_{}".format(scala_version_dependency),
        "@maven//:org_specs2_specs2_matcher_{}".format(scala_version_dependency),
    ],
    specs2_junit_classpath = [
        "@maven//:org_specs2_specs2_junit_{}".format(scala_version_dependency),
    ],
    visibility = ["//visibility:public"],
)
