package(default_visibility = ["//visibility:public"])

sources()

specs2_ite2e_test(
    name = "core",
    testonly = 1,
    srcs = [
        ":sources",
    ],
    deps = [
        "//data-streams/greyhound/core/src/it/resources",
        "//data-streams/greyhound/core/src/it/scala/com/wixpress/dst/greyhound/testkit",
        "//data-streams/greyhound/core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "//data-streams/greyhound/core/src/test/scala/com/wixpress/dst/greyhound/core/serialization",
        "//data-streams/greyhound/core/src/test/scala/com/wixpress/dst/greyhound/core/testkit",
        "@ch_qos_logback_logback_classic",
        "@dev_zio_zio_2_12",
        "@org_apache_kafka_kafka_clients",
    ],
)
