package(default_visibility = ["//visibility:public"])

sources()

specs2_ite2e_test(
    name = "core",
    size = "large",
    testonly = 1,
    srcs = [
        ":sources",
    ],
    deps = [
        "//core/src/it/resources",
        "//core/src/it/scala/com/wixpress/dst/greyhound/testenv",
        "//core/src/it/scala/com/wixpress/dst/greyhound/testkit",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/admin",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/domain",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/consumer/retry",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/zioutils",
        "//core/src/test/resources",
        #"//core/src/test/scala/com/wixpress/dst/greyhound/core/consumer",
        #"//core/src/test/scala/com/wixpress/dst/greyhound/core/testkit",
        "@ch_qos_logback_logback_classic",
        "@dev_zio2_izumi_reflect_2_12",
        "@dev_zio_zio2_2_12",
        "@dev_zio_zio2_test_2_12",
        "@org_apache_kafka_kafka_2_12",
        "@org_apache_kafka_kafka_clients",
    ],
)
