package(default_visibility = ["//visibility:public"])

sources()

scala_library(
    name = "testenv",
    testonly = 1,
    srcs = [
        ":sources",
    ],
    deps = [
        "@dev_zio_izumi_reflect_{}".format(scala_version_dependency),
        "@dev_zio_zio_managed_{}".format(scala_version_dependency),
        "//core/src/it/scala/com/wixpress/dst/greyhound/testkit",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/admin",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/metrics",
        "//core/src/main/scala/com/wixpress/dst/greyhound/core/producer",
        "//core/src/test/scala/com/wixpress/dst/greyhound/core/testkit",
        # "@dev_zio_izumi_reflect_{}".format(scala_version_dependency),
        "@dev_zio_zio_{}".format(scala_version_dependency),
        "@dev_zio_zio_test_{}".format(scala_version_dependency),
        "@org_apache_curator_curator_test",
        "@org_apache_kafka_kafka_{}".format(scala_version_dependency),
        "@org_apache_kafka_kafka_clients",
    ],
)
